# PRO2-

./: P1  bid_stack.c  bid_stack.h  config.cmake  console_list.c  console_list.h  test.c  types.h
P1/: CMakeLists.txt  config.cmake  dynamic_list.c  dynamic_list.h  main.c  prueba.txt  static_list.c  static_list.h  types.h
P1/script_minimos/: bid.txt  delete_ref.txt  new.txt  new_ref.txt
P2/: CMakeLists.txt  bid_stack.c  bid_stack.h  config.cmake  console_list.c  console_list.h  dynamic_list.c  kjdhgdshj  main.c  script.sh  static_list.c  test.c  test_bid_stack.c  test_console_list.c  types.h
P2/script_minimos/: award.txt  award_ref.txt  bid.txt  bid_ref.txt  invalidate.txt  invalidate_ref.txt  new_ref.txt  remove.txt
P2/script_test/: test_console_list_ref.txt
